--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -1,26 +1,47 @@
+controller_frequency: 3.0
+recovery_behavior_enabled: false
+clearing_rotation_allowed: false
+
 TrajectoryPlannerROS:
-
 # Robot Configuration Parameters
-  max_vel_x: 0.18
-  min_vel_x: 0.08
+  max_vel_x: 0.30
+  min_vel_x: 0.05
+  max_vel_y: 0.0
+  min_vel_y: 0.0
 
-  max_vel_theta:  1.0
-  min_vel_theta: -1.0
-  min_in_place_vel_theta: 1.0
+  # max_vel_theta: 1.0
+  min_in_place_vel_theta: 0.1
+  escape_vel: -0.1
 
-  acc_lim_x: 1.0
+  acc_lim_x: 2.5
   acc_lim_y: 0.0
-  acc_lim_theta: 0.6
+  acc_lim_theta: 3.2
 
-# Goal Tolerance Parameters
-  xy_goal_tolerance: 0.10
-  yaw_goal_tolerance: 0.05
-
-# Differential-drive robot configuration
+  # Differential-drive robot configuration
   holonomic_robot: false
 
-# Forward Simulation Parameters
-  sim_time: 0.8
-  vx_samples: 18
+  # Goal Tolerance Parameters
+  yaw_goal_tolerance: 0.1 # 0.1 radius = 5.7 degree
+  xy_goal_toloerance: 0.1 # 1.0 = 1m
+  latch_xy_goal_tolerance: false
+  pdist_scale: 0.9
+  gdist_scale: 0.6
+  meter_scoring: true
+
+  heading_lookhead: 0.325
+  heading_scoring: false
+  heading_scoring_timestep: 0.8
+  occdist_scale: 0.1
+  oscillation_reset_dist: 0.05
+  publish_cost_grid_pc: false
+  prune_plan: true
+
+  # Forward Simulation Parameters
+  sim_time: 1.0
+  sim_granularity: 0.025
+  angular_sim_granularity: 0.025
+  vx_samples: 8
+  vy_samples: 0
   vtheta_samples: 20
-  sim_granularity: 0.05
+  dwa: true
+  simple_attracor: false
