--- a/param/costmap_common_params.yaml
+++ b/param/costmap_common_params.yaml
@@ -2,15 +2,15 @@ obstacle_range: 2.0
 raytrace_range: 3.5
 
 footprinttt: [[0.4, 0.0], [0.4, 0.6], [0.0, 0.6], [-0.4, 0.6], [-0.4, 0.0], [-0.4, -0.6], [0.0, -0.6], [0.4, -0.6]]
-footprintt: [[ 0.0, 0.4], [0.6, 0.4], [0.6, 0.0], [0.6, -0.4], [-0.0, -0.4], [-0.6, -0.4], [-0.6, -0.0], [-0.6, 0.4]]
+footprint: [[ 0.0, 0.4], [0.6, 0.4], [0.6, 0.0], [0.6, -0.4], [-0.0, -0.4], [-0.6, -0.4], [-0.6, -0.0], [-0.6, 0.4]]
 
-footprint: [[ 0.0, 0.2], [0.3, 0.2], [0.3, 0.0], [0.3, -0.2], [-0.0, -0.2], [-0.3, -0.2], [-0.3, -0.0], [-0.3, 0.2]]
+footprintt: [[ 0.0, 0.2], [0.3, 0.2], [0.3, 0.0], [0.3, -0.2], [-0.0, -0.2], [-0.3, -0.2], [-0.3, -0.0], [-0.3, 0.2]]
 
-#robot_radius: x
+# robot_radius: 1
 
-inflation_radius: 0.0
+inflation_radius: 0.3
 cost_scaling_factor: 1.0
 
 map_type: costmap
 observation_sources: scan
-scan: {sensor_frame: scan_horiz, data_type: LaserScan, topic: lidar_h/scan, marking: false, clearing: false}
+scan: {sensor_frame: velodyne, data_type: LaserScan, topic: scan, marking: true, clearing: true}
