--- a/param/dwa_local_planner_params.yaml
+++ b/param/dwa_local_planner_params.yaml
@@ -20,8 +20,8 @@ DWAPlannerROS:
 
 # Goal Tolerance Parametes
   xy_goal_tolerance: 0.1
-  yaw_goal_tolerance: 0.1
-  latch_xy_goal_tolerance: false
+  yaw_goal_tolerance: 0.05
+  latch_xy_goal_tolerance: true
 
 # Forward Simulation Parameters
   sim_time: 2.0
