--- a/param/costmap_common_params.yaml
+++ b/param/costmap_common_params.yaml
@@ -3,12 +3,13 @@ raytrace_range: 3.5
 
 footprinttt: [[0.4, 0.0], [0.4, 0.6], [0.0, 0.6], [-0.4, 0.6], [-0.4, 0.0], [-0.4, -0.6], [0.0, -0.6], [0.4, -0.6]]
 footprint: [[ 0.0, 0.4], [0.6, 0.4], [0.6, 0.0], [0.6, -0.4], [-0.0, -0.4], [-0.6, -0.4], [-0.6, -0.0], [-0.6, 0.4]]
+footprintt: [[0.0, 0.0], [ 0.0, 0.8], [-1.2, 0.8], [-1.2, 0.0]]
 
 footprintt: [[ 0.0, 0.2], [0.3, 0.2], [0.3, 0.0], [0.3, -0.2], [-0.0, -0.2], [-0.3, -0.2], [-0.3, -0.0], [-0.3, 0.2]]
 
 # robot_radius: 1
 
-inflation_radius: 0.3
+inflation_radius: 0.5
 cost_scaling_factor: 1.0
 
 map_type: costmap
