--- a/param/local_costmap_params.yaml
+++ b/param/local_costmap_params.yaml
@@ -1,6 +1,6 @@
 local_costmap:
   global_frame: odom
-  robot_base_frame: velodyne
+  robot_base_frame: base_link
   update_frequency: 10.0
   publish_frequency: 10.0
   transform_tolerance: 0.5  
